# PromptVault

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  implementation_plan.md  project_report.md  pyproject.toml  task.md
.github/workflows/: ci.yml  eval-ci.yml
analysis/: benchmark.py
apps/dashboard/: next.config.js  package-lock.json  package.json
apps/dashboard/app/: layout.tsx
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  react.py  reflection.py  rewoo.py  router.py  tree_search.py
backend/app/agent/multi_agent/: __init__.py  critic.py  graph.py  orchestrator.py  researcher.py  state.py  synthesizer.py  workflow.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  health.py
backend/app/api/v1/: __init__.py  deployments.py  execute.py  prompts.py  serve.py  versions.py
backend/app/core/: auth.py  supabase.py
backend/app/llm/: __init__.py  base.py  client.py  github.py  nvidia.py  prompts.py
backend/app/models/: __init__.py  request.py  response.py
backend/app/schemas/: __init__.py  deployment.py  evaluation.py  execution.py  prompt.py  version.py
backend/app/services/: __init__.py  chat_service.py  deployment.py  diff.py  llm.py  parser.py  prompt.py  version.py
backend/app/tools/: __init__.py  base.py  calculator.py  registry.py  web_scraper.py  web_search.py
backend/supabase/migrations/: 001_initial_schema.sql
backend/tests/: README.md  conftest.py  test_agents.py  test_api.py  test_config.py  test_deployments.py  test_diff.py  test_health.py  test_multi_agent.py  test_parser.py  test_prompts.py  test_schemas.py  test_tools.py  test_versions.py
contracts/events/: events.py
core/domain/: types.py
core/errors/: exceptions.py
core/use_cases/: registry.py  schema.py
docs/: ARCHITECTURE.md  REVIEW.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthShell.tsx  ChatInput.tsx  ChatMessages.tsx  CreatePromptDialog.tsx  DeployPanel.tsx  (+8 more)
infrastructure/: http_client.py
infrastructure/db/: connection.py  models.py
scripts/: check_pass_rate.py
services/agent_eval/: Dockerfile  config.py  container.py
services/analysis/: flywheel.py  metrics.py  reporter.py
services/gateway/: Dockerfile  auth.py  main.py  router.py
services/judge/: Dockerfile  llm_judge.py  pipeline.py  rubric.py  rules.py
services/metrics/: Dockerfile
shared/: http_client.py
supabase/migrations/: 001_initial_schema.sql
tests/e2e/: test_full_user_journey.py
tests/integration/: conftest.py  test_eval_flow.py
(+107 files in other folders)
